--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     width: 150px;
     height: 50px;
     background-color: #B9CBC8;
-    color: #fff;
+    color: black;
     text-decoration: none;
     border: none;
     border-radius: 4px;
