--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@
     transition: background-color 0.3s;
   }
   
-  /* Add a hover effect to the button */
+
   .button:hover {
     background-color: #D4E7E3;
   }
 
-#muutuv-taust {
+muutuv-taust {
    background-size: cover;
    background-position: center;
    transition: background-image 0.5s ease-in-out;
