--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     background-color: #D4E7E3;
   }
 
-muutuv-taust {
+#muutuv-taust {
    background-size: cover;
    background-position: center;
    transition: background-image 0.5s ease-in-out;
