--- a/style.css
+++ b/style.css
@@ -14,14 +14,35 @@
     text-align: center;
     font-size: 16px;
     transition: background-color 0.3s;
+    margin: 0;
+    padding: 0;
+
   }
   
 
   .button:hover {
     background-color: #D4E7E3;
+    margin: 0;
+    padding: 0;
   }
 
 body {
+  margin: 0;
+  padding: 0;
+}
+
+
+
+.kiri {
+  color: white;
+  margin: 0;
+  padding: 0;
+}
+
+#all {
+  width: 100vw;
+  height: 100vh;
   background-size: cover;
-   transition: background-image 0.5s ease-in-out;
+  background-position: top;
+  transition: background-image 0.5s ease-in-out;
 }
