stiilimuudatused, et kõigil oleks sama

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-body {background-color: #edefe2; font-family: 'DM Serif Display', serif;}
+body {background-color: #e8e6de; font-family: 'Passion One', sans-serif;}
 
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
 
 
 
