--- a/style.css
+++ b/style.css
@@ -113,3 +113,9 @@ body {
     color: var(--helesinine);
     font-size: 3.5vw   
 }
+
+iframe {
+    width: 560px;
+    height: 315px;
+    border: none;
+}
