--- a/style_hendrik.css
+++ b/style_hendrik.css
@@ -109,3 +109,9 @@ body {
   top: 50px; /* Muuda vastavalt soovitud asukohale */
   left: 700px; /* Muuda vastavalt soovitud asukohale */
 }
+
+.tekstiväli {
+  /* Teise nupu jaoks erinevad asukoha stiilid */
+  top: 50px; /* Muuda vastavalt soovitud asukohale */
+  left: 100px; /* Muuda vastavalt soovitud asukohale */
+}
