--- a/style_hendrik.css
+++ b/style_hendrik.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 150px;
   height: 50px;
-  background-color: #B9CBC8;
+  background-color: #d1b47e;
   color: black;
   text-decoration: none;
   border: none;
@@ -20,7 +20,7 @@
 display: flex;
 width: 500px;
 height: 250px;
-background-color: #B9CBC8;
+background-color: #DBD4C7;
 color: black;
 text-decoration: none;
 border: none;
@@ -37,7 +37,7 @@ padding: 0;
 
 
 .nupp:hover, .tekstinupp:hover {
-  background-color: #D4E7E3;
+  background-color: #DBD4C7;
   margin: 0;
   padding: 0;
 }
