--- a/style_hendrik.css
+++ b/style_hendrik.css
@@ -2,7 +2,7 @@
   display: flex;
   width: 150px;
   height: 50px;
-  background-color: #d1b47e;
+  background-color: transparent;
   color: black;
   text-decoration: none;
   border: none;
@@ -10,7 +10,8 @@
   cursor: pointer;
   align-items: center;
   text-align: center;
-  font-size: 16px;
+  font-size: 24px;
+  font-family:'Passion One', sans-serif;
   transition: background-color 0.3s;
   margin: 0;
   padding: 0;
@@ -29,6 +30,7 @@ cursor: pointer;
 align-items: center;
 text-align: center;
 font-size: 16px;
+font-family: 'Passion One', sans-serif;
 transition: background-color 0.3s;
 margin: 0;
 padding: 0;
@@ -76,7 +78,7 @@ cursor: pointer;
 
 .läbipaistev-nupp .ikoon {
 font-size: 36px; /* Muuda vastavalt soovitud ikooni suurusele */
-color: #FFF; /* Ikooni värv */
+color: #FFF;
 font-family: 'Passion One', sans-serif;
 }
 
